
- degenerate face uv bounded by degenerate edge uv range
- interpolation to a subset of the domain
- add buffer option to fixed-point metric
- improve plotting of geometry curvature

Thu, Mar 22, 2019 : Released Refine 1.8.22

- continuously interpolated metric from background grid for sequential
- interpolation weights are clipped to prevent field and metric extrapolation
- ref_gather_scalar_tec exports one triangle faceid per zone
- surface adaptation cavity operator extended to edge splits
- curvature constraints near model tolerance are ignored
- curvature based metric includes isotropic geometry edge curvature
- curvature based metric defaults to 2 segments per radian (28 degrees)
- parmetis can be called on subset of processors (also avoids zero part input)
- use metis on smaller grids
- swap in 3D via cavity operator
- tetgen shell uses poly format to allow voids
- tetgen called with q2.0/10 to create coarser initial grids without slivers
- termination recommendation based on one percent edge-metric ratio limit change
- edge-metric ratio post floor more aggressive once ceiling drops below 3
- ref_adapt_parameter is private method
- ref_adapt_pass returns termination recommendation
- curvature based metric includes geometry topology feature size
- version 3 .meshb/.solb export for grids larger than 2 GBytes (10M vertex)
- ref_driver RCM global node order per processor on export
- ref_grid_pack uses RCM ordering
- ref_node_metric removed, use getters/setters, results in code speedup
- ref_metric_unit_node removed, metric initialized to unity during ref_node_add
- ref_metric_test --fixed-point asks for the timestep_increment

Tue, Nov 17, 2018 : Released Refine 1.8.21

- ref_driver repartitions before first pass to improve partition "shape"
- gather tecplot refactored for multiple scalars and T-infinity viz plugin
- added tri-surface normal deviation constraint
- added tri-surface normal deviation to smooth/swap tri quality